# easypost-mcp-server

./: .dockerignore  .env  .env.example  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml  requirements.txt
app/audit/: __init__.py  audit_logger.py
app/auth/: __init__.py  token_store.py
app/cli/: __init__.py
app/clients/: __init__.py  easypost_client.py
app/config/: __init__.py  settings.py
app/constants/: __init__.py  tool_categories.py  tool_risk.py
app/elicitation/: __init__.py  fallback.py  field_catalog.py
app/exceptions/: __init__.py  app_errors.py
app/logging/: __init__.py  logger.py
app/middleware/: __init__.py  auth.py  oauth_endpoints.py  oauth_form.py  rate_limiter.py
app/pipeline/: __init__.py  execution_pipeline.py
app/resources/: __init__.py  cache.py  fuzzy.py  resource_manager.py  static_resources.py
app/schemas/: __init__.py  address_schemas.py  batch_schemas.py  common.py  order_schemas.py  parcel_schemas.py  pickup_schemas.py  resource_schemas.py  return_schemas.py  shipment_schemas.py  tracking_schemas.py
app/server/: __init__.py  mcp_server.py
app/services/: __init__.py  address_service.py  batch_service.py  confirmation_service.py  elicitation_service.py  factory.py  idempotency_store.py  order_service.py  pickup_service.py  return_service.py  shipment_service.py  tracking_service.py  workflow_state_store.py
app/tools/: __init__.py  definition.py  registry.py
app/utils/: __init__.py  correlation.py  oauth_validation.py  sanitize.py  token_generation.py
tests/: test_audit_logger.py
(+16 files in other folders)
